--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "lodash": "^4.17.5",
     "material-ui": "^1.0.0-beta.40",
     "material-ui-icons": "^1.0.0-beta.36",
+    "moment": "^2.22.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-app-rewire-hot-loader": "^1.0.1",
     "react-app-rewired": "^1.5.0",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.5",
     "react-hot-loader": "^4.0.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.1",
+    "recharts": "^1.0.0-beta.10",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "redux-form-validators": "^2.4.3",
