Add integration with API and improvements

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NODE_PATH=src
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyDR3g2b4q4_ccnmv6OeE0s86zwmfDoVsgE
+REACT_APP_API_URL=http://localhost:9090/api/v1
+REACT_APP_AUTH_TOKEN_NAME=authToken
