--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-scripts": "1.1.1",
     "recharts": "^1.0.0-beta.10",
     "redux": "^3.7.2",
+    "redux-api-middleware": "^2.3.0",
     "redux-form": "^7.3.0",
     "redux-form-validators": "^2.4.3",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
